# quantum-emulator

./: .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  run.sh
quantum-emulator/: Cargo.toml
quantum-emulator/src/: main.rs
quantum_emulator/: Cargo.toml  logic.py  main.py  pyproject.toml
quantum_emulator/src/: hook.rs  logic.rs  main.rs
quantum_emulator/src/front/: index.html
quantum_emulator/src/python_backend/: logic.py  main.py
quantum_emulator/src/rust/: hook.rs  lib.rs  logic.rs  main.rs
